--- a/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
+++ b/sudoku-django-project/mainapp/templates/mainapp/leaderboard.html
@@ -8,68 +8,70 @@
         </title>
         <link href="{% static "mainapp/tailwind-output.css"%}" rel="stylesheet" type="text/css">
     </head>
-    <body class="bg-gradient-to-b from-teal-300 to-blue-700">
+    <body class="bg-gradient-to-b from-teal-300 to-blue-700 select-none">
         <div class="my-20">
             <h1 class="mainfont text-6xl text-center text-white bold">LEADERBOARD</h1>
         </div>
         <div class="flex justify-center">
             <div class="bg-gray-200 rounded-xl shadow-lg ml-40 mb-20 mt-10 w-3/12 subfont-ubmono">
-                <h1 class="pl-16 pr-20 py-16 text-gray-700 text-4xl">Top Scorers for ___ Difficulty!</h1>
-                <a href="" class="mx-20 px-5 py-2 text-white bg-red-500 rounded-xl shadow-lg">bruh</a>
+                <h1 class="pl-16 pr-20 py-10 text-gray-700 text-4xl">Top Scorers for ___ Difficulty!</h1>
+                <div class="flex flex-col flex-wrap w-20">
+                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-green-500 rounded-full hover:text-white hover:bg-green-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-green-600 transition duration-150 ease-in-out">Easy</a><br>
+                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-yellow-500 rounded-full hover:text-white hover:bg-yellow-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-yellow-600 transition duration-150 ease-in-out">Medium</a><br>
+                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-red-500 rounded-full hover:text-white hover:bg-red-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-red-600 transition duration-150 ease-in-out">Hard</a><br>
+                    <a href="#" class="transform mx-16 px-5 -my-2 py-1 w-30 text-center text-gray-700 text-2xl bg-opacity-0 border-4 border-indigo-500 rounded-full hover:text-white hover:bg-indigo-500 hover:bg-opacity-100 active:bg-opacity-100 active:bg-indigo-600 transition duration-150 ease-in-out">Expert</a>
+                </div>
             </div>
-            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10">
-                <h3 class="subfont-ubmono flex-1 text-3xl mt-6 border-0">Rank</h3>
-                <h3 class="subfont-ubmono flex-1 text-3xl mt-6 border-0">Name</h3>
-                <h3 class="subfont-ubmono flex-1 text-3xl mt-6 border-0">Time</h3>
-                <div class="mx-10 mt-5 rounded-t-xl text-center flex col-span-3 border-b-2 border-gray-400">
+            <div class="bg-white mr-40 rounded-xl shadow-lg text-center grid grid-cols-3 justify-self-end w-5/12 -ml-20 mb-10 overflow-hidden">
+                <div class="mx-8 mt-8 rounded-t-xl text-center flex col-span-3 border-b-2 border-gray-400">
                     <h3 class="flex-1 text-3xl py-2 mx-5">1.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
                     <h3 class="flex-1 text-3xl py-2 mx-5">2.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
                     <h3 class="flex-1 text-3xl py-2 mx-5">3.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
                     <h3 class="flex-1 text-3xl py-2 mx-5">4.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
                     <h3 class="flex-1 text-3xl py-2 mx-5">5.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
                     <h3 class="flex-1 text-3xl py-2 mx-5">6.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
                     <h3 class="flex-1 text-3xl py-2 mx-5">7.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400 bg-gray-200">
                     <h3 class="flex-1 text-3xl py-2 mx-5">8.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 text-center flex col-span-3 border-b-2 border-gray-400">
+                <div class="mx-8 text-center flex col-span-3 border-b-2 border-gray-400">
                     <h3 class="flex-1 text-3xl py-2 mx-5">9.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
-                <div class="mx-10 rounded-b-xl text-center flex col-span-3 bg-gray-200 mb-10">
+                <div class="mx-8 rounded-b-xl text-center flex col-span-3 bg-gray-200 mb-8">
                     <h3 class="flex-1 text-3xl py-2 mx-5">10.</h3>
                     <h3 class="flex-3 text-3xl py-2 mx-5">Put name here bro</h3>
-                    <h3 class="flex-1 text-3xl py-2 mx-5">00:01</h3>
+                    <h3 class="flex-1 text-3xl py-2 mx-5">00:00:01</h3>
                 </div>
             </div>
         </div>
